Fixing IE scrolling issue and also fixing horizontal scrollbar

--- a/web/sass-files/sass/partials/_base.scss
+++ b/web/sass-files/sass/partials/_base.scss
@@ -8,7 +8,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   background: $body-bg;
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
   &.white {
@@ -36,11 +36,13 @@ body {
 .container-fluid {
     @include legacy-pie-clearfix;
     height: 100%;
+    position: relative;
 }
 
 .channel-view {
     @include clearfix;
     height: 100%;
+    position: relative;
 }
 
 img {
